# SCDrone

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
ardrone_gui/: CMakeLists.txt  main.cpp  rgb_player.h  shaders.cpp  shaders.h
ardrone_keyboard/: CMakeLists.txt  main.cpp
ardrone_test/: CMakeLists.txt  atcmd_test.h  build_info.h.in  cuda_test.h  headers.h  main.cpp  mvlar.cpp  staging_test.h  thread_test.h  video_test.h  wifi_test.h
ardrone_utils/: CMakeLists.txt  control.h  demo_1.h  main.cpp
libardrone/: CMakeLists.txt
libardrone/include/: at_client.h  at_cmd.h  config.h  config_server.h  drone_client.h  logger.h  navdata_client.h  navdata_common.h  thread.h  video_client.h  video_common.h  video_staging.h
libardrone/src/: at_client.cpp  config_server.cpp  drone_client.cpp  navdata_client.cpp  thread.cpp  video_client.cpp  video_common.cpp  video_staging.cpp
libcontrol/: CMakeLists.txt  common_headers.h  filter.cpp  filter.h  tracking.cpp  tracking.h
libutils/: CMakeLists.txt  chrono.h  log.h  thread.h  thread_obj.h
ressources/: ardrone_videostream.pcapng
